updating requirements with prophet & arima

--- a/notebooks/models-notebook.ipynb
+++ b/notebooks/models-notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "d8e5a036-b022-4d83-8782-f4cb63384e92",
    "metadata": {},
    "source": [
-    "# Step 1: Import necessary libraries"
+    "# Importing necessary libraries"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "id": "18032f98-f912-47ca-8a0f-7a0f644f76d7",
    "metadata": {},
    "source": [
-    "# Step 2: Load and Process Data"
+    "# Loading and Processing Data"
    ]
   },
   {
@@ -65,11 +65,11 @@
    "source": [
     "#### Loading, Cleaning, and Feature Engineering\n",
     "\n",
-    "First, the stock price data for Apple (AAPL) is loaded from a CSV file located in the `../data/` directory.\n",
+    "First, the stock price data is loaded from a CSV file located in the `../data/` directory.\n",
     "\n",
     "```python\n",
-    "stock_file = \"../data/AAPL_prices.csv\"\n",
-    "df1 = load_data(stock_file)\n",
+    "stock_file = \"../data/{stock_name}_prices.csv\"\n",
+    "df = load_data(stock_file)\n",
     "```"
    ]
   },
