add comments and mardowns

--- a/notebooks/models-notebook.ipynb
+++ b/notebooks/models-notebook.ipynb
@@ -363,17 +363,43 @@
    "id": "364a6dc2-d411-4c0e-aa4d-cd7d4c6b5c7b",
    "metadata": {},
    "source": [
-    "# Step 3: Exploratory Data Analysis (EDA)"
+    "# Data Preparation"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3827276b-92ae-47fc-97b5-9d7847bc5797",
+   "id": "685afad3",
    "metadata": {},
    "source": [
-    "#### Animated Candlestick Chart\n",
+    "This cell prepares time-series data for multiple stocks and builds predictive models using Linear Regression and Random Forest. It employs a time-based cross-validation approach to evaluate model performance.\n",
     "\n",
-    "Plots the last 200 candlesticks with 10 & 20-day moving averages. Updates every 5 minutes."
+    "#### Functions\n",
+    "\n",
+    "##### `prepare_model_data(df)`\n",
+    "- **Purpose:** Prepares data for modeling by selecting features, standardizing them, and setting up time-series cross-validation.\n",
+    "- **Inputs:**  \n",
+    "  - `df`: DataFrame containing stock data with columns `Date`, `Symbol`, `Target`, and feature variables.\n",
+    "- **Outputs:**  \n",
+    "  - `X_scaled`: Standardized feature matrix.\n",
+    "  - `y`: Target variable.\n",
+    "  - `tscv`: TimeSeriesSplit object for cross-validation.\n",
+    "\n",
+    "##### `build_models(symbol, df)`\n",
+    "- **Purpose:** Trains and evaluates Linear Regression and Random Forest models for a given stock.\n",
+    "- **Inputs:**  \n",
+    "  - `symbol`: Stock symbol.\n",
+    "  - `df`: Preprocessed DataFrame for the stock.\n",
+    "- **Process:**  \n",
+    "  - Splits the data into train and test sets using time-series cross-validation.\n",
+    "  - Trains both models on training data.\n",
+    "  - Evaluates them using Mean Squared Error (MSE) on test data.\n",
+    "- **Outputs:**  \n",
+    "  - A dictionary containing the trained models and their average MSE across folds.\n",
+    "\n",
+    "#### Key Features\n",
+    "- **Time-series aware cross-validation:** Ensures model evaluation respects temporal dependencies.\n",
+    "- **Feature Standardization:** Normalizes data for better model performance.\n",
+    "- **Model Comparison:** Computes MSE for both models to determine the best-performing one.\n"
    ]
   },
   {
@@ -434,6 +460,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a0e66bc",
+   "metadata": {},
+   "source": [
+    "This cell trains and evaluates predictive models for multiple stocks (`AAPL`, `AMZN`, `MSFT`) using Linear Regression and Random Forest. The performance of these models is compared using Mean Squared Error (MSE).\n",
+    "\n",
+    "#### Process\n",
+    "1. **Train Models:**  \n",
+    "   - Extracts stock-specific data from `combined_data`.  \n",
+    "   - Calls `build_models()` for each stock to train Linear Regression and Random Forest models.  \n",
+    "   - Stores results in `model_results` dictionary.\n",
+    "\n",
+    "2. **Compare Performance:**  \n",
+    "   - Constructs a DataFrame (`performance_df`) summarizing MSE scores for both models.  \n",
+    "   - Displays performance comparison for easy interpretation.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "9786f24f",
@@ -468,6 +512,18 @@
     "# Display performance comparison\n",
     "performance_df.set_index('Stock', inplace=True)\n",
     "print(performance_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d089ed2",
+   "metadata": {},
+   "source": [
+    "#### Insights\n",
+    "- **MSFT has the lowest error rates**, suggesting better predictive performance for both models.\n",
+    "- **Linear Regression consistently outperforms Random Forest**, indicating that simpler linear relationships may better capture stock price movements in this dataset.\n",
+    "\n",
+    "This analysis provides a foundation for selecting the best-performing model for each stock.\n"
    ]
   },
   {
@@ -510,8 +566,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c90f9b6",
+   "metadata": {},
+   "source": [
+    "This cell analyzes and visualizes feature importance for Random Forest models trained on stock data. It helps identify which features contribute most to predicting stock movements.\n",
+    "\n",
+    "#### Process\n",
+    "1. **Extract Features:**\n",
+    "   - Removes `Target`, `Date`, and `Symbol` columns from the dataset.\n",
+    "   - Retains only predictive features.\n",
+    "\n",
+    "2. **Compute Feature Importance:**\n",
+    "   - Uses the `feature_importances_` attribute from the trained Random Forest model.\n",
+    "\n",
+    "3. **Visualize Feature Importance:**\n",
+    "   - Creates a bar plot for each stock.\n",
+    "   - Displays the most influential features in descending order.\n",
+    "\n",
+    "#### Execution\n",
+    "The function `plot_feature_importance()` is called for each stock in `stocks`, generating feature importance visualizations.\n",
+    "\n",
+    "#### Insights\n",
+    "- **Helps identify key drivers of stock price movements.**\n",
+    "- **Features with higher importance values contribute more to predictions.**\n",
+    "- **Can be used to refine model inputs and improve predictive accuracy.**\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bb24af7e-2255-4c4c-a96a-dd6141cae04c",
    "metadata": {},
    "outputs": [
@@ -575,6 +659,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af68d336",
+   "metadata": {},
+   "source": [
+    "This cell evaluates the performance of two predictive models—**Linear Regression** and **Random Forest**—for stock price forecasting and determines the best-performing model for each stock.\n",
+    "\n",
+    "#### Process\n",
+    "1. **Compare Model Performance:**\n",
+    "   - Uses Mean Squared Error (MSE) to evaluate accuracy.\n",
+    "   - The model with the lowest MSE is considered the best.\n",
+    "\n",
+    "2. **Determine Best Model per Stock:**\n",
+    "   - If **Linear Regression** has a lower MSE, it is selected.\n",
+    "   - Otherwise, **Random Forest** is chosen.\n",
+    "\n",
+    "3. **Summary Output:**\n",
+    "   - Prints the best model for each stock along with its MSE."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "8c7468f1-402b-4b20-a458-4fac7ca37cb6",
@@ -606,6 +710,34 @@
     "for stock, results in model_results.items():\n",
     "    best_model, best_score = get_best_model_for_stock(results)\n",
     "    print(f\"{stock}: Best model is {best_model} with MSE of {best_score:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb805d9a",
+   "metadata": {},
+   "source": [
+    "This cell builds **ARIMA (AutoRegressive Integrated Moving Average) models** for predicting stock prices and evaluates their performance using Mean Squared Error (MSE).\n",
+    "\n",
+    "#### Process\n",
+    "1. **Check for Stationarity**  \n",
+    "   - Uses the **Augmented Dickey-Fuller (ADF) test** to determine if the stock's closing price time series is stationary.  \n",
+    "   - If non-stationary, **differencing** is applied to stabilize the series.\n",
+    "\n",
+    "2. **Train-Test Split**  \n",
+    "   - The last **60 days** of data are reserved for testing.  \n",
+    "   - The remaining data is used for training.\n",
+    "\n",
+    "3. **Model Training**  \n",
+    "   - Fits an **ARIMA(1,1,1)** model on the training data.  \n",
+    "   - A more refined approach would involve **auto_arima** or **grid search** to select the best parameters.\n",
+    "\n",
+    "4. **Forecasting & Evaluation**  \n",
+    "   - Predicts stock prices for the test period.  \n",
+    "   - Computes **Mean Squared Error (MSE)** to measure accuracy.\n",
+    "\n",
+    "#### Execution\n",
+    "The script loops through selected **Stocks**, attempting to build ARIMA models."
    ]
   },
   {
@@ -672,6 +804,34 @@
     "        print(f\"ARIMA model built for {stock}\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error building ARIMA model for {stock}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81177ba0",
+   "metadata": {},
+   "source": [
+    "This cell builds **Prophet models** to forecast stock prices and evaluates their accuracy using **Mean Squared Error (MSE)**.\n",
+    "\n",
+    "#### Process\n",
+    "1. **Data Preparation**  \n",
+    "   - Converts the stock's date and closing price into a **Prophet-compatible format** (`ds` for date, `y` for target variable).\n",
+    "\n",
+    "2. **Train-Test Split**  \n",
+    "   - The last **60 days** of data are reserved for testing.  \n",
+    "   - The remaining data is used for training.\n",
+    "\n",
+    "3. **Model Training**  \n",
+    "   - Uses **Facebook Prophet** with **daily seasonality** enabled.  \n",
+    "   - Fits the model on the training data.\n",
+    "\n",
+    "4. **Forecasting & Evaluation**  \n",
+    "   - Generates future dates equal to the test period.  \n",
+    "   - Predicts stock prices and extracts the last 60 days of predictions.  \n",
+    "   - Computes **Mean Squared Error (MSE)** to measure accuracy.\n",
+    "\n",
+    "#### Execution & Results\n",
+    "- The code loops through selected **Stocks**, building Prophet models for each."
    ]
   },
   {
@@ -766,6 +926,28 @@
     "        print(f\"Prophet model built for {stock}\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error building Prophet model for {stock}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8da5601",
+   "metadata": {},
+   "source": [
+    "This cell aggregates and compares the **Mean Squared Error (MSE)** of different stock price prediction models, including:\n",
+    "\n",
+    "- **Linear Regression**\n",
+    "- **Random Forest**\n",
+    "- **ARIMA**\n",
+    "- **Facebook Prophet**\n",
+    "\n",
+    "#### Process\n",
+    "1. **Combine Model Results**  \n",
+    "   - Gathers MSE scores from all models for each stock (`AAPL`, `AMZN`, `MSFT`).\n",
+    "   - Ensures missing values are handled if a model fails for a stock.\n",
+    "\n",
+    "2. **Create a DataFrame for Comparison**  \n",
+    "   - Constructs a table to compare model performances across different stocks.\n",
+    "   - Uses **MSE** as the metric to assess accuracy."
    ]
   },
   {
