--- a/notebooks/models-notebook.ipynb
+++ b/notebooks/models-notebook.ipynb
@@ -2365,11 +2365,27 @@
    "id": "4aa37375-3f59-45c0-8f04-a2746b622446",
    "metadata": {},
    "source": [
-    "### Conclusion  \n",
+    "### Conclusion\n",
     "\n",
-    "This analysis provides a comprehensive technical overview of stock market trends using indicators such as Moving Averages, Bollinger Bands, RSI, ADX, and MACD. By integrating these tools, we identified potential buy and sell signals, assessed market momentum, and evaluated overall trend strength. The combination of statistical modeling and visualization offers valuable insights for informed decision-making in trading and investment strategies.  \n",
+    "#### Key Findings\n",
+    "- **Linear Regression consistently outperforms Random Forest**, achieving the lowest MSE across all stocks.\n",
+    "- **Prophet (Improved with Cross-Validation) outperforms traditional Prophet models**, but still has higher MSE compared to Linear Regression and Random Forest.\n",
+    "- **ARIMA results were omitted in the final comparison**, it did not have significant improvements.\n",
     "\n",
-    "However, while technical analysis is a powerful tool, it should not be used in isolation. Market conditions, macroeconomic factors, and fundamental analysis must be considered to enhance reliability. No strategy guarantees future performance, and all investments carry inherent risks.  \n",
+    "#### Stock-Specific Insights\n",
+    "- **AAPL:** Best model is **Linear Regression** (MSE: 0.000385). Prophet (Improved) has an MSE of **0.020843**, which is higher.\n",
+    "- **AMZN:** Best model is **Linear Regression** (MSE: 0.000498). Prophet (Improved) MSE is **0.044683**, indicating lower accuracy.\n",
+    "- **MSFT:** Best model is **Linear Regression** (MSE: 0.000352). Prophet (Improved) performs better than AMZN but still has **0.015600** MSE.\n",
+    "\n",
+    "#### Recommendations\n",
+    "- **For short-term stock price prediction**, Linear Regression is the best choice given its **low error and simplicity**.\n",
+    "- **Random Forest does not significantly outperform Linear Regression**, suggesting it may not be necessary for this use case.\n",
+    "- **Prophet can be useful for long-term trend forecasting**, but its performance depends on **hyperparameter tuning** and **cross-validation techniques**.\n",
+    "- **Future improvements** can include:\n",
+    "  - Hyperparameter tuning for all models\n",
+    "  - Incorporating additional external factors (macroeconomic indicators, earnings reports)\n",
+    "  - Using ensemble methods to combine the strengths of different models\n",
+    "\n",
     "\n",
     "### **Disclaimer:**  \n",
     "This notebook is for educational and informational purposes only and does not constitute financial advice. Trading and investing in financial markets involve risk, and past performance is not indicative of future results. Always conduct your own research or consult a professional before making financial decisions."
